@@ -1,3 +1,4 @@
+12/1/11 basics: Fixed initial value of track friction for the slider
 12/1/11 basics: Fixed: when transitioning from a spline to the floor, there is a thermal energy discontinuity
 12/1/11 basics: Made floor friction same as track friction
 12/1/11 common: Fixed: Tracks are no longer interactive in non-basics mode
